@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2010-12-15 (CVS):
+    * Renamed mstrconv.c to mid2strm.c and midi_win.h to mid2strm.h. Adjusted
+      makefiles and visual studio project files.
+
 2010-12-14 (CVS):
     * hexen2 and hexenworld Makefiles: Minor adjustments.
 
